--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div id="home" class="home-container container">
+    <main id="home">
+        <div class="home-container container">
             <h1>Resumo</h1>
             <p class="atividade">Atividade atual: <i id="atividadeAtual"></i></p>
             <p class="atividade">Próxima atividade: <i id="atividadeProx"></i></p>
-            <p class="atividade">Copos de água: <i id="coposCount"></i></p>
+            <p class="atividade">Copos de água: <i id="coposCount"></i><a onclick="somaCopo(true)"> <i class="bi bi-plus-lg"></i></a></p>
         </div>
         <div class="crono-water">
             <div id="cronograma" class="cronograma-container container">
