--- a/configs.html
+++ b/configs.html
@@ -5,29 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configurações</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="source/configs.css">
+    <link rel="stylesheet" href="source/style/configs.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">
-                        <i class="bi bi-house-door-fill"></i> Home
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#cronograma"><i class="bi bi-calendar3"></i> Cronograma</a>
-                </li>
-                <li>
-                    <a href="index.html#agua"><i class="bi bi-cup-straw"></i> Consumo de Água</a>
-                </li>
-                <li>
-                    <a href="#"><i class="bi bi-gear"></i></a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <header id="header"></header>
     <main>
         <h1>Configurações</h1>
         <form>
@@ -42,8 +23,10 @@
             <button type="button" onclick="setSettings()">Salvar</button>
         </form>
     </main>
-    <footer></footer>
-    <script src="source/configs.js"></script>
+    <footer id="footer"></footer>
+
+    <script src="source/script/include.js"></script>
+    <script src="source/script/configs.js"></script>
     <script>
         document.getElementById("nome").value = getNome();
         document.getElementById("sobrenome").value = getSobrenome();
