--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="source/style/style.css">
 </head>
-<body>
+<body id="body">
     <header id="header"></header>
     <main id="home">
         <div class="saudacoes-container container">
@@ -128,6 +128,11 @@
     <footer id="footer"></footer>
 
     <script>
+        function openMenu() {
+            document.getElementById("menu").classList.toggle("open");
+            document.getElementById("body").classList.toggle("hide");
+        }
+
         //resetNote();       
     </script>
     <script src="source/script/include.js"></script>
