--- a/configs.html
+++ b/configs.html
@@ -10,7 +10,7 @@
 <body>
     <header id="header"></header>
     <main>
-        <h1>Configurações</h1>
+        <h1><i class="bi bi-gear"></i> Configurações</h1>
         <form>
             <div class="form-inputs">
                 <div class="campo cp-nome"><span>Nome: </span><input type="text" name="nome" id="nome" required oninput="verifyInputs()"></div>
@@ -24,7 +24,6 @@
 
     <script src="source/script/include.js"></script>
     <script src="source/script/configs.js"></script>
-    <script src="source/script/header.js"></script>
     <script>
         document.getElementById("nome").value = getNome();
         document.getElementById("sobrenome").value = getSobrenome();
