--- a/configs.html
+++ b/configs.html
@@ -14,6 +14,7 @@
         <form>
             <div class="form-inputs">
                 <div class="campo cp-nome"><span>Nome: </span><input type="text" name="nome" id="nome" required oninput="verifyInputs()"></div>
+                <div class="campo cp-senha"><span>Senha: </span><input type="password" name="senha" id="senha" oninput="verifyInputs()"></div>
                 <div class="campo cp-copos"><span>Meta copos de água: </span><input type="number" value="10" min="3" max="99" name="cups" id="cups" required oninput=" verifyInputs()"></div>
                 <div class="campo cp-minutos"><span>Minutos para aviso: </span><input type="number" name="min" id="mins" value="45" min="15" max="120" required oninput="verifyInputs()"></div>
             </div>
@@ -25,10 +26,10 @@
     <script src="source/script/include.js"></script>
     <script src="source/script/configs.js"></script>
     <script>
-        document.getElementById("nome").value = getNome();
-        document.getElementById("sobrenome").value = getSobrenome();
-        document.getElementById("cups").value = getMetaCopos();
-        document.getElementById("mins").value = getMinCopos();
+        document.getElementById("nome").value = getSettingValue("nome");
+        document.getElementById("senha").value = getSettingValue("senha");
+        document.getElementById("cups").value = getSettingValue("cups");
+        document.getElementById("mins").value = getSettingValue("mins");
     </script>
 </body>
 </html>
