cronograma voltou a apitar hahahaha

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="home-container container">
             <h1># Resumo</h1>
-            <p class="atividade">Atividade atual: <i id="atividadeAtual"></i></p>
-            <p class="atividade">Próxima atividade: <i id="atividadeProx"></i></p>
+            <p class="atividade">Atividade atual: <i id="atAtual"></i></p>
+            <p class="atividade">Próxima atividade: <i id="atProx"></i></p>
             <p class="atividade">Copos de água: <i id="coposCount"></i><a onclick="somaCopo(true)"> <i class="bi bi-plus-lg"></i></a><a onclick="somaCopo(false)"> <i class="bi bi-dash-lg"></i></a></p>
             <p class="atividade">Meta: <i id="meta"></i></p>
             <p class="atividade">Anotações: <i id="anotacaoCount"></i></p>
